# auto-debt-management

./: .gitignore  README.md
tls-cca-api/: .env.example  Note.txt  README.md  conftest.py  pyproject.toml  start_project.ps1
tls-cca-api/config/: settings.py  urls.py
tls-cca-api/core/: filters.py  urls.py  views.py
tls-cca-api/core/mixins/: serializers.py  stats.py
tls-cca-api/core/serializers/: mixins.py
tls-cca-api/core/services/: search_services.py  stats_services.py
tls-cca-api/core/utils/: validators.py
tls-cca-api/crm/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
tls-cca-api/crm/services/: customer_services.py  portfolio_services.py
tls-cca-api/crm/templates/: admin_customer.js
tls-cca-api/crm/tests/: test_models.py  test_views.py
tls-cca-api/docs/: Fonctionnalité - Control.txt
tls-cca-api/rbac/: mixins.py  models.py  serializers.py  views.py
tls-cca-api/rbac/fixtures/: permissions_config.json
tls-cca-api/rbac/services/: assignment_service.py  permission_service.py  permission_services.py
tls-cca-api/rbac/tests/: test_models.py  test_views.py
tls-cca-api/receivables/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
tls-cca-api/receivables/services/: debt_services.py  recovery_services.py
tls-cca-api/receivables/tests/: test_models.py  test_views.py
tls-cca-api/sales/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
tls-cca-api/sales/services/: creditsale_services.py
tls-cca-api/users/: admin.py  models.py  serializers.py  views.py
(+9 files in other folders)
